trunk/Archive2/b1/a5b2e8c7c38ab4/output
main.cpp:1:16: error: 'const' qualifier may not be applied to a reference
void foo(int & const) {}
               ^
1 error generated.
